@@ -5,5 +5,7 @@
 </head>
 <body>
 <h1>Index</h1>
+<p><a href="assets.html">Assets</a><br>
+<a href="abc.html">Dead link</a></p>
 </body>
 </html>
