@@ -1,2 +1,5 @@
 Index
 =====
+
+[Assets](assets.md)
+[Dead link](abc.html)
